# StructCooker

./: .gitignore  .gitmodules  README.md  pyproject.toml  remap_msa.py
configs/: a3m_lmdb.yaml  analyze_train.yaml  analyze_valid1.yaml  analyze_valid2.yaml  attach_seq_metadata_train.yaml  attach_seq_metadata_train_20260224.yaml  attach_seq_metadata_valid_1.yaml  build_seq_id_map.yaml  ccd_lmdb.yaml  check_template_db.yaml  cif_lmdb.yaml  extract_ccd_cif.yaml  extract_edge_node_train.yaml  extract_edge_node_valid1.yaml  extract_edge_node_valid2.yaml  extract_fasta.yaml  extract_fasta_from_train.yaml  extract_fasta_train.yaml  extract_fasta_valid_1.yaml  extract_fasta_whole.yaml  extract_interacting_seq_clusters.yaml  extract_interacting_seq_ids.yaml  extract_metadata.yaml  filter_cif.yaml  hhmake.yaml  hhsearch.yaml  hmmsearch.yaml  msa_search.yaml  remove_lower_from_a3m.yaml  seq_cluster30.yaml  template_lmdb.yaml  train_filter.yaml  train_filter_20260224.yaml  valid_filter_1.yaml  valid_filter_2.yaml
pipelines/: README.md
scripts/: build_lmdb.py  manually_fix_cif.py  parse_cif.py  postprocess.py  postprocess_ㅐㅣㅇ.py  test_db.py
submits/: a3m_lmdb.sh  analyze_db.sh  attach_seq_metadata.sh  build_seq_id_map.sh  ccd_lmdb.sh  check_a3mdb.sh  check_template_db.sh  cif_lmdb.sh  cif_lmdb_shard.sh  download_afdb.sh  extract_ccd_cif.sh  extract_edge_node.sh  extract_fasta.sh  extract_interacting_seq_clusters.sh  extract_interacting_seq_ids.sh  extract_metadata.sh  extract_proteins_fasta.sh  extract_tv_fasta.sh  ffinex.sh  filter_0.sh  hhmake.sh  hhsearch.sh  hmmsearch.sh  link_a3m.sh  make_msa.sh  merge_db.sh  merge_signalp.sh  merge_template_db.sh  msa_rename.sh  msa_search.sh  remap_msa.sh  remove_lower_from_a3m.sh  (+6 more)
(+69 files in other folders)
