[project]
name = "StructCooker"
version = "0.1.0"
description = "Benchmark Codes for structure prediction"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sanggeun Park", email = "psk6950@snu.ac.kr" }]
dependencies = [
    "biopython>=1.85,<2",
    "click>=8.1.8,<9",
    "joblib >=1.4.2,<2",
    "lmdb>=1.6.2,<2",
    "omegaconf>=2.3.0,<3",
    "zstandard>=0.24.0,<1",
    "typing_extensions>=4.15.0,<5",
    "numpy>=2.2.6,<3",
    "networkx>=3.2",
    "biomol>=1.0.0",
    "kalign-python==3.5.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.6,<10",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "F722", # Incompatible with jaxtyping
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "C901",
    "N806",
    "E501",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pixi.workspace]
channels = ["conda-forge","bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
structcooker = { path = ".", editable = true }
mkdocs = ">=1.6,<2"
mkdocs-material = ">=9.6,<10"
datacooker = { path = "libs/datacooker", editable = true }


[tool.pixi.dependencies]
python = "~=3.10"
ruff = ">=0.11.6,<0.12"
pytest = ">=8.4.1,<9"
ipykernel = ">=6.30.1,<7"
hmmer = "==3.3.2"
anarci = "*"
cd-hit = "*"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
  "src/structcooker",
]


[tool.pyright]
enableReachabilityAnalysis = false
